# feature_selector_2

./: .gitignore  README.md  agents.md  local_instructions.md  prd.md  pyproject.toml  repo_stats.md
docs/: agent_onboarding.md  iteration_plan.md
docs/datasets/: student_grades.md
fs_xgb/: __init__.py  pipeline.py  types.py
fs_xgb/cli/: main.py
fs_xgb/config/: default_config.yaml
fs_xgb/data/: __init__.py  datasets_registry.py
fs_xgb/data/loaders/: __init__.py  brfss.py  census_income.py  santander.py  student_grades.py
fs_xgb/eval/: plots.py  reporting.py
fs_xgb/experiments/configs/: brfss_2015.yaml  brfss_2015_frontier.yaml  brfss_2015_sample.yaml  census_income.yaml  census_income_balanced.yaml  census_income_balanced_frontier.yaml  census_income_frontier.yaml  (+6 more)
fs_xgb/fs_logic/: __init__.py  fs_pipeline.py
fs_xgb/metrics/: __init__.py  classification.py
fs_xgb/models/: __init__.py  xgb_classifier.py
fs_xgb/preprocessing/: __init__.py  encoding.py  pipeline.py
fs_xgb/splitting/: __init__.py  random_splits.py
logs/agents/: 20251207T032043Z_codex_gpt5.md  20251207T033032Z_codex_gpt5.md  20251207T034524Z_codex_gpt5.md  20251207T040333Z_codex_gpt5.md  20251207T042545Z_codex_gpt5.md  20251207T160855Z_codex_gpt5.md  20251207T161201Z_codex_gpt5.md  20251207T161503Z_codex_gpt5.md  20251207T161810Z_codex_gpt5.md  20251207T163938Z_codex_gpt5.md  20251207T165028Z_codex_gpt5.md
scripts/: create_census_balanced_sample.py  prepare_brfss_2015.py
temp/brfss/: load_brfss_2015.py  variable_descriptions.csv
tests/: conftest.py  test_overfit_filter.py
(+24 files in other folders)
